# PacketSanitizerPro

./: README.md
installer/linux-x86_64/: install.sh
installer/macos-universal/: install.sh
installer/windows-x86_64/: install.bat  install.ps1
src/: CMakeLists.txt  packetsanitizer.qrc  packetsanitizer_plugin.c  packetsanitizer_plugin.h  sanitizer_engine.c  sanitizer_engine.h  ui_bridge.cpp  ui_bridge.h  ui_main_window.cpp  ui_main_window.h
